--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "latest-version": "^7.0.0",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.21"
   }
 }
